Tue Jul 18 19:04:42 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Numeric_Limits.h:

          Corrected short integer limit constants, i.e. "s/SHORT/SHRT/g".

          Try other known "long long" integer constants if
          "{U}LLONG_{MIN,MAX}" are not available.  Issue a preprocessor
          error if all known cases have been exhausted.

Tue Jul 18 16:55:31 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Makefile.am (libACE_la_SOURCES, nobase_include_HEADERS):

          Added new Sig_{Adapter,Handler}.* source and header files.

Mon Jul 17 23:18:52 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/README: Documented the ACE_TIMEPROBE_ASSERTS_FIXED_SIZE macro.

Mon Jul 17 23:16:55 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Timeprobe_T.cpp (timeprobe): Added a check to guard against
          segfaults by wrapping the index around when it reaches the end
          of the buffer.  Thanks to Patrick Rabau <pr2345 at gmail dot
          com> for this fix.

Tue Jul 18 13:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2595_Regression

Tue Jul 18 12:48:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/taoidldefaults.mpb:
          Fixed the rules to decide whether a .inl file should be added
          or not. Thanks to Chad Elliot for noticing this incorrect
          rule.

Tue Jul 18 09:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Win32.pm:
          Increased delay factor from 2 to 3, downloading executables
          seems to take longer now

Tue Jul 18 09:54:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Removed chorus support

Mon Jul 17 16:06:57 UTC 2006  Steve Huston  <shuston@riverace.com>
